--- a/src/user/components/price-graph.html
+++ b/src/user/components/price-graph.html
@@ -1,5 +1,5 @@
 <template>
     <div class="ui raised segment">
-        <canvas id="line-chart" chart="type: line; should-update: true; throttle: 100; data.bind: simpleLineData"></canvas>
+        <canvas chart="type: line; should-update: true; throttle: 100; data.bind: simpleLineData; native-options.one-time: nativeOptions"></canvas>
     </div>
 </template>
