--- a/static/styles.css
+++ b/static/styles.css
@@ -241,6 +241,10 @@ div.au-stagger {
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15),0 0 0 1px rgba(34,36,38,.15) inset;
 }
 
+.price-alerts .ui.menu .dropdown.item .menu {
+    background: rgba(255, 255, 255, 0.1);
+}
+
 #welcome .masthead.segment {
     min-height: 700px;
     padding: 1em 0em;
