--- a/static/styles.css
+++ b/static/styles.css
@@ -315,3 +315,25 @@ div.au-stagger {
 #login .column {
     max-width: 450px;
 }
+
+.price-alerts .overlay {
+    position: fixed;
+    left: 0;
+    top: 1em;
+    background: white;
+    opacity: 1;
+    width: 99%;
+    height: 100%;
+    overflow-y: auto;
+    padding: 10em 7em 5em;
+    margin: 0 0.5%;
+    border-radius: 2px;
+}
+
+.price-alerts .source-list .logo {
+    opacity: 0.5;
+    transition: opacity .2s ease-in-out;
+}
+.price-alerts .source-list .logo:hover {
+    opacity: 1;
+}
