Added image and activate button in alert page

--- a/src/resources/components/confirmation-modal.html
+++ b/src/resources/components/confirmation-modal.html
@@ -1,5 +1,5 @@
 <template bindable="header,message" containerless>
-    <div class="ui small basic modal">
+    <div class="ui small basic confirmation modal">
         <div class="ui icon header">
             <i class="archive icon"></i>
             ${header}
