--- a/src/resources/components/overlay.html
+++ b/src/resources/components/overlay.html
@@ -1,6 +1,6 @@
 <template>
     <div class="ui overlay page dimmer">
-        <div class="ui fullscreen modal">
+        <div class="ui fullscreen overlay modal">
             <i class="close icon"></i>
             <div class="content">
                 <slot></slot>
