--- a/static/styles.css
+++ b/static/styles.css
@@ -231,6 +231,10 @@ div.au-stagger {
 .price-alerts a.ui.card:hover {
     transform: none;
 }
+.ui.inactive.card > .content > a.header, 
+.ui.cards > .inactive.card > .content > a.header {
+    color: rgba(0, 0, 0, 0.3);
+}
 .ui.cards > .inactive.card > .image::before {
     content: "";
     display: block;
@@ -249,7 +253,17 @@ div.au-stagger {
     width: auto;
     margin: 0 auto;
     max-width: 100%;
+    max-height: 100%;
     padding: .875em .75em;
+}
+
+.price-alerts .ui.cards > .card > .image > img.portrait {
+    height: 100%;
+    width: auto;
+}
+.price-alerts .ui.cards > .card > .image > img.landscape {
+    height: auto;
+    width: 100%;
 }
 
 .ui.range input[type="range"] {
