Adjustments on the welcome page

--- a/src/resources/components/overlay.html
+++ b/src/resources/components/overlay.html
@@ -2,7 +2,7 @@
     <div class="ui overlay page dimmer">
         <div class="ui fullscreen overlay modal">
             <i class="close icon"></i>
-            <div class="content">
+            <div class="content primary-light">
                 <slot></slot>
             </div>
         </div>
