Major style adjustments; logo and favicon added; Usage of PriceWise name

--- a/src/user/components/add-source.html
+++ b/src/user/components/add-source.html
@@ -6,7 +6,7 @@
                     <p>Browse your favourite shopping site and paste the product URL</p>
                     <div class="ui large right action input">
                         <input value.bind="newAlertUrl" type="url" placeholder="Url" autofocus>
-                        <button class="ui teal button ${newAlertUrl.length ? '' : 'disabled'}">
+                        <button class="ui primary primary-action button ${newAlertUrl.length ? '' : 'disabled'}">
                             <i class="add icon"></i>
                             Add
                         </button>
