--- a/index.ejs
+++ b/index.ejs
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#02776f">
+    
     <meta charset="utf-8">
     <title><%- htmlWebpackPlugin.options.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
@@ -8,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
-  <body aurelia-app="main" class="price-alerts">
+  <body aurelia-app="main" class="pricewise">
     <div class="ui inverted active dimmer">
       <div class="ui huge indeterminate text loader"><%- htmlWebpackPlugin.options.metadata.title %></div>
     </div>
