--- a/index.ejs
+++ b/index.ejs
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta name="description" content="PriceWise allows you to monitor prices for the products you want.">
+    <meta name="theme-color" content="#02776f">
+
+    <meta name="og:type" content="website" />
+    <meta name="og:site_name" content="PriceWise" />
+    <meta name="og:image" content="https://pricewise.azurewebsites.net/images/pricewise-logo.png" />
+    <meta name="og:description" content="PriceWise allows you to monitor prices for the products you want." />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#02776f">
     
-    <meta charset="utf-8">
     <title><%- htmlWebpackPlugin.options.metadata.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <!-- imported CSS are concatenated and added automatically -->
