Added affiliate link for CJ, but in comment for now

--- a/index.ejs
+++ b/index.ejs
@@ -42,5 +42,6 @@
     <!-- Webpack Dev Server reload -->
     <script src="/webpack-dev-server.js"></script>
     <% } %>
+    <!-- <script src="//www.anrdoezrs.net/am/8408170/include/joined/am.js"></script> -->
   </body>
 </html>
