--- a/src/user/components/add-source.html
+++ b/src/user/components/add-source.html
@@ -3,12 +3,11 @@
         <div class="ui middle aligned center aligned grid"> 
             <div class="column" style="max-width: 60%;">
                 <form submit.delegate="createSource()" role="form" class="ui large form ${className}">
-                    <p>Browse your favourite shopping site and paste the product URL</p>
+                    <p i18n="sources.addSource">Browse your favourite shopping site and paste the product URL</p>
                     <div class="ui large right action input">
                         <input value.bind="newAlertUrl" type="url" placeholder="Url" autofocus>
-                        <button class="ui primary primary-action button ${newAlertUrl.length ? '' : 'disabled'}">
+                        <button class="ui primary primary-action button ${newAlertUrl.length ? '' : 'disabled'}" i18n="[append]sources.add">
                             <i class="add icon"></i>
-                            Add
                         </button>
                     </div>
                 </form>
